RESOLVED FIXED74903
Exceptions not thrown correctly from DFG JIT on 32bit
https://bugs.webkit.org/show_bug.cgi?id=74903
Summary Exceptions not thrown correctly from DFG JIT on 32bit
Gavin Barraclough
Reported 2011-12-19 19:00:16 PST
Arguments for lookupExceptionHandler are not setup correctly. In the case of ARMv7 we rely on lr being preserved over a call, this in invalid. On x86 we don't should be poking the arguments onto the stack!
Attachments
Gavin Barraclough
Comment 1 2011-12-19 19:01:42 PST
Gavin Barraclough
Comment 2 2011-12-19 19:16:47 PST
Fixed in r103294
Note You need to log in before you can comment on or make changes to this bug.