https://bugs.webkit.org/show_bug.cgi?id=74903 Exceptions not thrown correctly from DFG JIT on 32bit

Reviewed by Oliver Hunt.

Arguments for lookupExceptionHandler are not setup correctly.
In the case of ARMv7 we rely on lr being preserved over a call,
this in invalid. On x86 we don't should be poking the arguments onto the stack!

Source/JavaScriptCore:

* bytecode/CodeBlock.h:
(JSC::CodeBlock::bytecodeOffsetForCallAtIndex):
* dfg/DFGAssemblyHelpers.h:
(JSC::DFG::AssemblyHelpers::restoreReturnAddressBeforeReturn):
* dfg/DFGGPRInfo.h:
* dfg/DFGJITCompiler.cpp:
(JSC::DFG::JITCompiler::compileBody):
* dfg/DFGJITCompiler.h:
(JSC::DFG::JITCompiler::addExceptionCheck):
(JSC::DFG::JITCompiler::addFastExceptionCheck):
* dfg/DFGOperations.cpp:
* dfg/DFGOperations.h:

LayoutTests:

* fast/js/dfg-exception-expected.txt: Added.
* fast/js/dfg-exception.html: Added.
* fast/js/script-tests/dfg-exception.js: Added.
(doesntDFGCompile):
(test):



Canonical link: https://commits.webkit.org/91656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103294 268f45cc-cd09-0410-ab3c-d52691b4dbfc