Source/JavaScriptCore/bytecode/CodeBlock.h
@@ -370,6 +370,17 @@ namespace JSC {
             return binarySearch<CallReturnOffsetToBytecodeOffset, unsigned, getCallReturnOffset>(callIndices.begin(), callIndices.size(), getJITCode().offsetOf(returnAddress.value()))->bytecodeOffset;
         }
 
+        unsigned bytecodeOffsetForCallAtIndex(unsigned index)
+        {
+            if (!m_rareData)
+                return 1;
+            Vector<CallReturnOffsetToBytecodeOffset>& callIndices = m_rareData->m_callReturnIndexVector;
+            if (!callIndices.size())
+                return 1;
+            ASSERT(index < m_rareData->m_callReturnIndexVector.size());
+            return m_rareData->m_callReturnIndexVector[index].bytecodeOffset;
+        }
+
         void unlinkCalls();
         
         bool hasIncomingCalls() { return m_incomingCalls.begin() != m_incomingCalls.end(); }
